# corex-math

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
libs/: CMakeLists.txt
src/corex/: CMakeLists.txt  math.hpp
src/corex/math/: CMakeLists.txt  algebra.cpp  algebra.hpp  constants.hpp  ds.hpp  geometry.cpp  geometry.hpp  linear_algebra.cpp  linear_algebra.hpp  utils.cpp  utils.hpp
src/corex/math/ds/: Circle.hpp  Line.hpp  LineSegments.hpp  NPolygon.hpp  Point.hpp  Polygon.hpp  Rectangle.hpp  Vec2.cpp  Vec2.hpp
